@@ -1,0 +1,1 @@
+# This file has Macintosh line endings (\r) on purposereturn 'mac'
