@@ -1,3 +1,12 @@
+CMF 1.5 branch HEAD only (unreleased)
+  
+  Bug Fixes
+
+    - In certain circumstances file-based PythonScripts with foreign line
+      endings were not handled correctly. PythonScripts are now read using
+      python's universal line-endings support.
+      (http://www.zope.org/Collectors/CMF/403)
+      
 CMF 1.5.6-beta (2006/02/19)
 
   Bug Fixes
